# WuziqiCpp

./: AIPlayer.cpp  AIPlayer.h  Board.cpp  Board.h  CMakeLists.txt  Console.cpp  Console.h  Design Document Demo.md  Global.h  NeuralNet.cpp  NeuralNet.h  Player.cpp  Player.h  Referee.cpp  Referee.h  StaticAI.cpp  StaticAI.h  WuZiQi.h  main.cpp  nn_weights.txt
